/**
 */
package moon.nju.edu.cn.km.km;


/**
 * <!-- begin-user-doc -->
 * A representation of the model object '<em><b>Countable Element</b></em>'.
 * <!-- end-user-doc -->
 *
 *
 * @see moon.nju.edu.cn.km.km.KMPackage#getCountableElement()
 * @model
 * @generated
 */
public interface CountableElement extends Concept {
} // CountableElement
