/**
 */
package moon.nju.edu.cn.km.km;


/**
 * <!-- begin-user-doc -->
 * A representation of the model object '<em><b>Quantifiable Element</b></em>'.
 * <!-- end-user-doc -->
 *
 *
 * @see moon.nju.edu.cn.km.km.KMPackage#getQuantifiableElement()
 * @model
 * @generated
 */
public interface QuantifiableElement extends Concept {
} // QuantifiableElement
